force-app/main/consent-management/objects/Restricted_Source_Config__c/Restricted_Source_Config__c.object-meta.xml
<CustomObject>
    <label>Restricted sources</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restricted sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>