force-app/main/consent-management/objects/Restricted_Source_Config__c/fields/Referral_Resource__c.field-meta.xml
<CustomField>
    <fullName>Referral_Resource__c</fullName>
    <label>Referral Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>ePR-SponsorSpecific</fullName>
            </value>
            <value>
                <fullName>ePR_Campaign-SponsorSpecific</fullName>
            </value>
            <value>
                <fullName>HCP Prescreen Log</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>ACOE</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>23andMe</fullName>
            </value>
            <value>
                <fullName>IQVIA registry</fullName>
            </value>
            <value>
                <fullName>Ciitizen</fullName>
            </value>
            <value>
                <fullName>MassiveBio</fullName>
            </value>
            <value>
                <fullName>SubjectWell</fullName>
            </value>
            <value>
                <fullName>Piper</fullName>
            </value>
            <value>
                <fullName>James Lind Care</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>ePR</fullName>
                <isActive>false</isActive>
                <label>ePR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>