force-app/main/consent-management/objects/Restricted_Source_Config__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study/Program</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Restricted sources</relationshipLabel>
    <relationshipName>Restricted_Source_Config</relationshipName>
    <type>Lookup</type>
</CustomField>